# IntWork3_ELEX23

./: .gitignore  README.md
datasheets/battery-t12-7f2/: info.md
datasheets/gy271-compass-module/: registers-config.md
firmware/: main.py
firmware/database/: notification_controller.py
firmware/esp32/main/: CMakeLists.txt  main.c  main.h
firmware/esp32/main/handlers/: buzzer.c  buzzer.h  compass_module.c  compass_module.h  i2cHandler.c  i2cHandler.h  ledc_servo_motor.c  ledc_servo_motor.h  motor_handler.c  motor_handler.h  taskHandler.c  taskHandler.h
firmware/esp32/main/utils/: byte_operator.c  byte_operator.h  constants.h
firmware/mall_security_robot/: mall_security_robot.py
firmware/raspberry/: main.py
firmware/utils/: datetime_operator.py
patrole/: .gitignore  App.tsx  app.json  package-lock.json  package.json  routes.js  server.py  test.json  useBLE.ts
patrole/Components/: ButtonP.tsx  HeaderP.tsx
patrole/Styles/: styles.tsx
patrole/android/: build.gradle  settings.gradle
patrole/android/app/: build.gradle
patrole/components/: RemoteControls.tsx
patrole/services/: Bluetooth.tsx  raspberryAPI.ts  useBLE.ts
tests/compass-module/: CMakeLists.txt  compassModule.c
tests/esp32-i2c-scan/: CMakeLists.txt
tests/esp32-interruptions/: CMakeLists.txt
tests/esp32-raspberrypi3b-connection/: CMakeLists.txt
tests/esp32-rele-buzzer-test/: CMakeLists.txt
tests/esp32-servo-motor-pwm-test/: CMakeLists.txt
tests/firebase-tests/: test_authetication.py  test_real_time_database.py  test_storage.py
tests/motor-module-bst7960/: CMakeLists.txt
(+54 files in other folders)
