idf_component_register(
    SRCS 
        "main.c"
        "handlers/compass_module.c"
        "handlers/taskHandler.c"
        "handlers/i2cHandler.c"
        "handlers/motor_handler.c"
        "handlers/ledc_servo_motor.c"
        "handlers/buzzer.c"
        "utils/byte_operator.c"
    INCLUDE_DIRS 
        "."
        "./handlers"
        "./utils"
)
